# cxcp

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  .readthedocs.yml  doxyfile  lint.bat  loptions.lnt  main.c  project.lnt  working.lnt  xcp_config.h  xcp_config_defaults.json
.github/workflows/: ccpp.yml
checker/: cxcp.lcl
checker/cl-tidy/: .clang-format  .clang-tidy  check.sh  xcp.c  xcp_config.h
checker/pc-lint/: check.bat  pc-lint.bat  project.lnt  xcp_config.h
checker/splint/: check.sh  xcp_config.h
docs/: api.rst  conf.py  doxyfile  hook_functions.rst  index.rst  options.rst  tutorial.rst
examples/: appl1.c  func_gen.h
examples/debug_on_pico/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c  xcp_config.h
examples/pio/: platformio.ini
examples/pio/include/: xcp_config.h
examples/pio/src/: main.cpp
examples/simlin/: .gdbinit  Makefile  app_config.c  app_config.h  main.c  start_vcan0.sh  xcp_config.h
examples/simwin/: Makefile  Makefile.kvaser  app_config.c  app_config.h  main.c  xcp_config.h
examples/xcpsim/: .gdbinit  CMakeLists.txt  app_config.c  app_config.h  appl1.c  main.c  set_lsan_options.sh  xcp_config.h
flsemu/: common.c  flsemu.c  flsemu.h  flsemu_xcp.c
flsemu/posix/: flsemu.c
flsemu/win/: flsemu.c
inc/: flsemu.h  queue.h  terminal.h  xcp.h  xcp_eth.h  xcp_hw.h  xcp_log.h  xcp_macros.h  xcp_ow.h  xcp_task.h  xcp_terminal.h  xcp_threads.h  xcp_timecorr.h  xcp_tl_timeout.h  xcp_tui.h  xcp_types.h  xcp_util.h
src/: checksum.c  daq.c  xcp.c  xcp_checksum.c  xcp_daq.c  xcp_timecorr.c  xcp_util.c
src/hw/: options.c  terminal.c  threads.c
src/hw/arduino/: hw.c  hw.cpp
src/hw/linux/: hw.c  tui.c
src/hw/macos/: hw.c
src/hw/pico/: hw.c
src/hw/posix/: hw.c
src/hw/win/: hw.c
src/tl/: xcp_tl_timeout.c
src/tl/bt/: ardbt.cpp  winbt.c
src/tl/can/: arduino_can.cpp  kvaser.c  linux_socket_can.c
src/tl/eth/: arduino_networking.cpp  common.c  linuxeth.c  wineth.c  wineth_iocp.c
src/tl/sxi/: arduino_serial.cpp  pico_cdc.c  xcp_tl.c
src/tl/udp/: comm.c  comm.h  xcp_tl.c  xcp_tl.h
tests/: CMakeLists.txt  build.py  build2.sh  builder.py  checksum_mocks.c  config.py  daq.py  fls_mocks.c  loader.py  requirements.txt  templates.py  test_checksum.py  test_cs.py  test_fls.py  test_xcpdaq.py  wrapper.cpp  xcp.py  xcp_config.h  xcp_config.tmpl  xcp_if.py  xcp_init.c  xcp_mocks.c  xcp_types.py
tools/: amalgam8.py  build.cmd  config.py  library.properties  reformat.cmd  reformat.sh  xcp_config.h
tools/app_gen/: pyproject.toml
tools/app_gen/src/pyxcp_appgen/: arduino.py  main.py  renderer.py  state.py  utils.py
tools/app_gen/src/pyxcp_appgen/templates/: arduino_src.mako  groups_measurements.mako  module.mako  project.mako
tools/arduino/hello_xcp/: hello_xcp.ino  xcp.h  xcp_config.h
